gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail306.d
version https://git-lfs.github.com/spec/v1
oid sha256:a3c32ef7068da75cea943b4f39988a3ab07e25d5fc863e034b6a4a059c30ee6d
size 164
